# Ray_Tracing

./: README.md
Other_Ray_Tracers_Backups/Advanced_Ray_Tracer Just Before Instancing/Advanced_Ray_Tracer/: concentric_circles.iv  cubesphere3.iv  modified1.iv  my_light.h  rt_shade.cpp  sphere.h  sphere1.iv  sphere3.iv  sphere3s.iv
Other_Ray_Tracers_Backups/Advanced_ray_tracers/: rt_shade.cpp  rt_shade_old.cpp
Other_Ray_Tracers_Backups/Avd_Ray_Trace Lab3+Non Uniform Sphere Scaling + Checker Board/Avd_Ray_Trace/: cylinder1.iv  refraction1.iv  rt_shade.cpp  sphere1.iv  sphere3mod.iv
Other_Ray_Tracers_Backups/Avd_Ray_Trace Lab3+Non Uniform Sphere Scaling/Avd_Ray_Trace/: rt_shade.cpp  sphere.h
Other_Ray_Tracers_Backups/Avd_Ray_Trace Nov 26/Avd_Ray_Trace/: OSUInventor.cpp  cubesphere3mod.iv  cylinder1.iv  cylinder3s.iv  my_cylinder.h  refraction3.iv  (+7 more)
Other_Ray_Tracers_Backups/working_ray_tracer/: ray_traicer.ncb  ray_traicer.sln
Submit_Lab1_681/: CMakeLists.txt  OSUInventor.cpp  Ray_Tracer_Read_Me.txt  my_camera.h  my_light.h  rt.cpp  sphere.h
Submit_Lab2_681/: OSUInventor.C  Ray_Tracer_Read_Me.txt  my_camera.h  my_light.h  rt.C  sphere.h
Submit_Lab3_681/: CMakeLists.txt  OSUInventor.h  Ray_Tracer_Read_Me.txt  cube.h  my_camera.h  my_light.h  rt.C  sphere.h
Submit_Lab4_681/: ReadMe.txt  output.ppm
Submit_Lab4_681/my_iv_1/: Makefile  datastruct.h  frame.h  huffman.h  jpeg.C  jpeg.h  my_light.h  myio.C  pixel.h  rt.C  sample_command_run.txt  scan.C  scan.h
iv_files/: my_iv_1.iv  my_iv_2.iv  sphere1.iv  sphere3Orig.iv  sphere3s.iv  sphereCycloidLit.iv  watch.iv
(+59 files in other folders)
